FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20230111:
AUTHOR: vishwin@FreeBSD.org

  USE_PYTHON=pep517 has been added to facilitate building using the
  new format.

  USE_PYTHON=pep517 takes no arguments. Operation is similar to
  USE_PYTHON=distutils, although the build backend specified in
  pyproject.toml shall be specified in BUILD_DEPENDS.

  A usage guide and implementation primer is available at:
        https://wiki.freebsd.org/Python/PEP-517

20221217:
AUTHOR: tcberner@FreeBSD.org

  USES=llvm has been added to more easily depend on llvm.

  USES=llvm supports two kinds of arguments:

  * mode
	<none>:	defaults to build
	build:	add a BUILD_DEPENDS on chosen llvm-port
	run:	add a RUN_DEPENDS on chosen llvm-port
	lib:	add a LIB_DEPENDS on chosen llvm-port

  * version
	<none>:		defaults to ${LLVM_DEFAULT}
	number:		use explicitly the specified version
	min=number:	use specified min if ${LLVM_DEFAULT} is lower
	max=number:	use specified max if ${LLVM_DEFAULT} is higher

  An example usage might be:
	USES=	llvm
  or
	USES=	llvm:13,build
  or
	USES=	llvm:min=14,lib

  The following variables are exposed to be used in the ports tree at the moment:
	* LLVM_VERSION	version chosen from the arguments to llvm.mk
	* LLVM_PORT	chosen llvm port
	* LLVM_CONFIG	llvm-config of the chosen port
	* LLVM_LIBLLVM	libLLVM.so of the chosen port
	* LLVM_PREFIX	installation prefix of the chosen port

20221026:
AUTHOR: bapt@FreeBSD.org
  3 new features are available now: PIE, RELRO, BIND_NOW, each port can
  specify the inability to support any via <feature>_UNSAFE

  All 3 are off by default, the intent is to activate following the freebsd
  base activation of the same features.
